fix some files, make things work on the server computer, etc.